Bug 398560 - Kate preview crash Kate when closing documents from tab bar
Summary: Kate preview crash Kate when closing documents from tab bar
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.08.3
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-09-12 21:08 UTC by Filipe Azevedo
Modified: 2024-12-12 21:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.34 KB, text/plain)
2024-12-12 21:12 UTC, Matheus Niceas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filipe Azevedo 2018-09-12 21:08:30 UTC
Application: kate (18.08.1)

Qt Version: 5.11.1
Frameworks Version: 5.50.0
Operating System: Linux 4.17.17-1 x86_64
Distribution: "KaOS"

-- Information about the crash:
- What I was doing when the application crashed:
I was closing a markdown document which is part of a git repository by clicking the tab bar close buton.
Randomly, but reproducible very often; a document close cause the preview panel to crash the application.

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f793fcf1880 (LWP 9875))]

Thread 19 (Thread 0x7f78fcff9700 (LWP 9894)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 18 (Thread 0x7f78fd7fa700 (LWP 9893)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 17 (Thread 0x7f78fdffb700 (LWP 9892)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 16 (Thread 0x7f78fe7fc700 (LWP 9891)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 15 (Thread 0x7f78feffd700 (LWP 9890)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 14 (Thread 0x7f78ff7fe700 (LWP 9889)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 13 (Thread 0x7f78fffff700 (LWP 9888)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 12 (Thread 0x7f7920ff9700 (LWP 9887)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 11 (Thread 0x7f79217fa700 (LWP 9886)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 10 (Thread 0x7f7921ffb700 (LWP 9885)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 9 (Thread 0x7f79227fc700 (LWP 9884)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 8 (Thread 0x7f7922ffd700 (LWP 9883)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 7 (Thread 0x7f79237fe700 (LWP 9882)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 6 (Thread 0x7f7923fff700 (LWP 9881)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 5 (Thread 0x7f7928bd9700 (LWP 9879)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 4 (Thread 0x7f79293da700 (LWP 9878)):
#0  0x00007f7948c30585 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib/libpthread.so.0
#1  0x00007f794bcb1c6b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f7929a7289d in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f7929a774f8 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f7929a71e4f in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f7929a74f1b in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#8  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 3 (Thread 0x7f7933fd0700 (LWP 9877)):
#0  0x00007f79449087b4 in g_mutex_unlock () at /usr/lib/libglib-2.0.so.0
#1  0x00007f79448c39f0 in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#2  0x00007f79448c43b3 in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007f79448c458c in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007f794bed001b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f794be778ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007f794bca66fa in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007f7950218665 in QDBusConnectionManager::run() () at /usr/lib/libQt5DBus.so.5
#8  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#9  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#10 0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 2 (Thread 0x7f793ce81700 (LWP 9876)):
#0  0x00007f794b5b737b in poll () at /lib/libc.so.6
#1  0x00007f79486cf827 in  () at /usr/lib/libxcb.so.1
#2  0x00007f79486d13aa in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007f793fa5b8c9 in QXcbEventReader::run() () at /usr/lib/qt5/plugins/platforms/../../../libQt5XcbQpa.so.5
#4  0x00007f794bcb0ee8 in QThreadPrivate::start(void*) () at /usr/lib/libQt5Core.so.5
#5  0x00007f7948c2a4a7 in start_thread () at /lib/libpthread.so.0
#6  0x00007f794b5c0f9f in clone () at /lib/libc.so.6

Thread 1 (Thread 0x7f793fcf1880 (LWP 9875)):
[KCrash Handler]
#5  0x00007f794bea9077 in QMetaObjectPrivate::disconnect(QObject const*, int, QMetaObject const*, QObject const*, int, void**, QMetaObjectPrivate::DisconnectType) () at /usr/lib/libQt5Core.so.5
#6  0x00007f794bea9527 in QObject::disconnectImpl(QObject const*, void**, QObject const*, void**, QMetaObject const*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f792a7b07be in  () at /usr/lib/qt5/plugins/ktexteditor/ktexteditorpreviewplugin.so
#8  0x00007f792a7ad6fb in  () at /usr/lib/qt5/plugins/ktexteditor/ktexteditorpreviewplugin.so
#9  0x00007f794bea6b44 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#10 0x00007f794fdd9472 in KTextEditor::MainWindow::viewChanged(KTextEditor::View*) () at /usr/lib/libKF5TextEditor.so.5
#11 0x00007f794bea6a4a in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#12 0x0000000000485cff in  ()
#13 0x0000000000455464 in  ()
#14 0x00000000004560c5 in  ()
#15 0x00000000004563f7 in  ()
#16 0x000000000048a4fa in  ()
#17 0x00007f794bea6a4a in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#18 0x0000000000485975 in  ()
#19 0x000000000043b13b in  ()
#20 0x000000000043ba1e in  ()
#21 0x00007f794bea7532 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#22 0x00007f794cd87983 in QWidget::event(QEvent*) () at /usr/lib/libQt5Widgets.so.5
#23 0x00007f794cd4aeac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#24 0x00007f794cd51fcf in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#25 0x00007f794be78fd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#26 0x00007f794be7b975 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#27 0x00007f794bed0973 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /usr/lib/libQt5Core.so.5
#28 0x00007f79448c42f7 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#29 0x00007f79448c4508 in  () at /usr/lib/libglib-2.0.so.0
#30 0x00007f79448c458c in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#31 0x00007f794becffff in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#32 0x00007f793fae39d1 in QPAEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/qt5/plugins/platforms/../../../libQt5XcbQpa.so.5
#33 0x00007f794be778ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#34 0x00007f794be803b0 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#35 0x000000000042ac8c in  ()
#36 0x00007f794b4f0f2a in __libc_start_main () at /lib/libc.so.6
#37 0x000000000042be1a in _start ()

Reported using DrKonqi
Comment 1 Ahmad Samir 2018-10-28 08:48:16 UTC
IIUC, the backtrace isn't complete, you need to at least install the debug package for kate.
Comment 2 Bug Janitor Service 2018-11-12 16:00:27 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2018-11-27 04:46:43 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 4 Filipe Azevedo 2018-11-27 20:02:19 UTC
The issue is still present and i can now reliably reproduce it:

- Have a tree of markdown files in a hierarchy of folders
- Have the root folder be a git repository
- open this repository as a project in kate
- open multiple files from the project panel
- activate the preview panel
- click on each document in the top tab bar (please note that i enabled the top tabbar in plus to the document panel)
- when the last tab bar entry on the right is active, close it from its close button
- crash
Comment 5 Filipe Azevedo 2019-02-17 14:49:53 UTC
up ?
Comment 6 Christoph Feck 2019-03-09 00:05:22 UTC
Please add a backtrace with debug symbols.

Adding ktexteditorpreviewplugin mainter for inspection.
Comment 7 Friedrich W. H. Kossebau 2019-03-09 01:05:27 UTC
Not a maintainer anymore, so removing myself from cc:
Comment 8 Dominik Haumann 2019-03-10 07:36:25 UTC
Proposed patch: https://phabricator.kde.org/D19637
Comment 9 Lothar 2019-03-26 14:34:38 UTC
Git commit 5d28eaaf904185c8662079621ea3ba139f158822 by loh tar.
Committed on 26/03/2019 at 14:07.
Pushed by lohtar into branch 'master'.

PreviewWidget: Avoid preview update when doc type is not supported

Differential Revision: https://phabricator.kde.org/D19637

M  +7    -5    addons/preview/previewwidget.cpp

https://commits.kde.org/kate/5d28eaaf904185c8662079621ea3ba139f158822
Comment 10 Matheus Niceas 2024-12-12 21:12:14 UTC
Created attachment 176565 [details]
New crash information added by DrKonqi

kate (23.08.5) using Qt 5.15.13

Estava analisando um arquivo, e ao fecha-lo da aba de arquivos abertos, o Kate fechou inesperadamente.

-- Backtrace (Reduced):
#4  0x00007ae511ac1502 in Kate::TextRange::~TextRange() () from /lib/x86_64-linux-gnu/libKF5TextEditor.so.5
#5  0x00007ae511ac1725 in Kate::TextRange::~TextRange() () from /lib/x86_64-linux-gnu/libKF5TextEditor.so.5
[...]
#8  0x00007ae511c77684 in KTextEditor::MainWindow::viewChanged(KTextEditor::View*) () from /lib/x86_64-linux-gnu/libKF5TextEditor.so.5
[...]
#10 0x00007ae513ec7d71 in KateViewManager::viewChanged(KTextEditor::View*) () from /lib/x86_64-linux-gnu/libkateprivate.so.23.08.5
#11 0x00007ae513eceb95 in KateViewManager::activateView(KTextEditor::View*) () from /lib/x86_64-linux-gnu/libkateprivate.so.23.08.5
Comment 11 Christoph Cullmann 2024-12-12 21:19:50 UTC
Hi, please re-try this with a more up-to-date version, thanks!