PreviewWidget: Avoid preview update when doc type is not supported

BUG: 398560

Differential Revision: https://phabricator.kde.org/D19637